--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,8 @@
-*.class
-*.log
-
-# sbt specific
-.cache
-.history
-.lib/
-dist/*
-target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
-
-# Scala-IDE specific
-.scala_dependencies
-.worksheet
-
-# Vim stuff
-*.swp
-*.un~
+/.idea
+/.project
+/.settings
+/numerato
+/project/project
+/project/target
+/target
+/tests/target
